kyverno/block-operations-for-label-namespace/validating-policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: block-operations-for-label-namespace
spec:
  failurePolicy: Fail
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        operations: [UPDATE, DELETE]
        resources: ["*"]
  validations:
    - message: >
        Resources which are protected (admin.io/is-protected: true) can only be
        updated or deleted by a cluster admin.
      expression: >
        (
          has(object.metadata.labels) ? 
          !object.metadata.labels.exists(l, l == 'admin.io/is-protected') :
          true
        )
        ||
        (
          has(request.userInfo.groups) &&
          request.userInfo.groups.exists(g, g == 'cluster-admin')
        )
